# A-nerds-actual-cookbook

./: .buildinfo  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: README.md  index.md
_sources/deserts/: banoffee_pie.md  deserts.md
_sources/desserts/: banoffee_pie.md  desserts.md
_sources/inspiration/: inspiration.md
_sources/kitchen_necessities/: good_practices.md  python_snippets.md
_sources/kitchen_necessities/de_toko/: chinees.md  de_toko.md  indiaas.md  japans.md
_sources/kitchen_necessities/gear/: gear.md
_sources/python/: README.md
deserts/: banoffee_pie.html  banoffee_pie.md  deserts.html  deserts.md
desserts/: banoffee_pie.html  desserts.html
inspiration/: inspiration.html  inspiration.md
kitchen_necessities/: good_practices.html  python_snippets.html  python_snippets.md
kitchen_necessities/de_toko/: chinees.html  chinees.md  de_toko.html  de_toko.md  indiaas.html  indiaas.md  japans.html  japans.md
kitchen_necessities/gear/: gear.html  gear.md
python/: README.html  good_practices.html  python_snippets.html
