[tool.poetry]
name = "a-nerds-actual-cookbook"
version = "0.1.0"
description = "A virtualenv that can hold all cookbook packages."
authors = ["David Berenstein"]
license = "David Berenstein et al."

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.11.3"
ghp-import = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
